k8s/components/apps/surveys/formbricks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: formbricks
spec:
  type: ClusterIP
  selector:
    app: formbricks
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
