k8s/components/apps/surveys/formbricks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: formbricks-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
spec:
  ingressClassName: traefik
  rules:
    - host: "formbricks.example.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: formbricks
                port:
                  number: 3000
